<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LinearLayout</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bn1">Test Button 1</string>
    <string name="bn2">Test Button 2</string>
    <string name="bn3">Test Button 3</string>
    <string name="bn4">Test Button 4</string>
    <string name="bn5">Test Button 5</string>

</resources>