<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation = "vertical"
android:layout_width = "match_parent"
android:layout_height="match_parent"
android:gravity="top|center_horizontal"
android:id = "@+id/root"
>

<Button
android:id = "@+id/bn1"
android:text="@string/bn1" 
android:layout_width = "wrap_content"
android:layout_height="wrap_content"       
/>

<Button
android:id = "@+id/bn2"
android:text="@string/bn2" 
android:layout_width = "wrap_content"
android:layout_height="wrap_content"       
/>

<Button
android:id = "@+id/bn3"
android:text="@string/bn3" 
android:layout_width = "wrap_content"
android:layout_height="wrap_content"       
/>

<Button
android:id = "@+id/bn4"
android:text="@string/bn4" 
android:layout_width = "wrap_content"
android:layout_height="wrap_content"       
/>

<Button
android:id = "@+id/bn5"
android:text="@string/bn5" 
android:layout_width = "wrap_content"
android:layout_height="wrap_content"       
/>
</LinearLayout>